[gd_scene load_steps=27 format=3 uid="uid://nc4bb6j7bfmr"]

[ext_resource type="Texture2D" uid="uid://cn3bcmbtfaslw" path="res://Assets/Images/blue.png" id="1_5p1qk"]
[ext_resource type="Texture2D" uid="uid://bkuwyrp2h32nf" path="res://Assets/Images/green.png" id="2_b4k2o"]
[ext_resource type="Texture2D" uid="uid://jytdujwfdw3g" path="res://Assets/Images/grey.png" id="3_3nnk3"]
[ext_resource type="Texture2D" uid="uid://ca5a0axv58b2g" path="res://Assets/Images/orange.png" id="4_nkb00"]
[ext_resource type="Texture2D" uid="uid://gki33dcx445h" path="res://Assets/Images/pink.png" id="5_l3ddc"]
[ext_resource type="Texture2D" uid="uid://dvp7esarak60u" path="res://Assets/Images/purple.png" id="6_k15t0"]
[ext_resource type="Texture2D" uid="uid://b84dwttr3t2ji" path="res://Assets/Images/red.png" id="7_mc56m"]
[ext_resource type="Texture2D" uid="uid://brqb3bmxsx0f2" path="res://Assets/Images/yellow.png" id="8_kcxgx"]
[ext_resource type="Texture2D" uid="uid://mk2ehkhwtvf3" path="res://Assets/Images/black.png" id="9_o3i82"]
[ext_resource type="Script" uid="uid://d33cyo52ufd1a" path="res://src/Game/Grid/Grid.gd" id="9_seumx"]
[ext_resource type="AudioStream" uid="uid://cigb1kv0kqthe" path="res://Assets/Audio/SFX_PieceHardDrop.mp3" id="11_hj3iq"]
[ext_resource type="AudioStream" uid="uid://c0yu07er68qul" path="res://Assets/Audio/SFX_GameOver.mp3" id="11_j82em"]
[ext_resource type="AudioStream" uid="uid://dvh4y6vmxj7up" path="res://Assets/Audio/SFX_SpecialTSpin.mp3" id="11_jg17o"]
[ext_resource type="AudioStream" uid="uid://co0a714gitx3t" path="res://Assets/Audio/SFX_PieceRotateLR.mp3" id="11_skbss"]
[ext_resource type="AudioStream" uid="uid://c18t3o8hhsruv" path="res://Assets/Audio/SFX_PieceFall.mp3" id="11_x8hxf"]
[ext_resource type="AudioStream" uid="uid://bcwr6n05jitco" path="res://Assets/Audio/SFX_PieceRotateFail.mp3" id="13_ick42"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_op7du"]
texture = ExtResource("1_5p1qk")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8bmw2"]
texture = ExtResource("5_l3ddc")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pi4ti"]
texture = ExtResource("4_nkb00")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y20ev"]
texture = ExtResource("8_kcxgx")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_txhso"]
texture = ExtResource("2_b4k2o")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yi42v"]
texture = ExtResource("6_k15t0")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_orqht"]
texture = ExtResource("7_mc56m")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wm8n3"]
texture = ExtResource("3_3nnk3")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0frfi"]
texture = ExtResource("9_o3i82")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nvjli"]
tile_size = Vector2i(90, 90)
sources/0 = SubResource("TileSetAtlasSource_op7du")
sources/1 = SubResource("TileSetAtlasSource_8bmw2")
sources/2 = SubResource("TileSetAtlasSource_pi4ti")
sources/3 = SubResource("TileSetAtlasSource_y20ev")
sources/4 = SubResource("TileSetAtlasSource_txhso")
sources/5 = SubResource("TileSetAtlasSource_yi42v")
sources/6 = SubResource("TileSetAtlasSource_orqht")
sources/7 = SubResource("TileSetAtlasSource_wm8n3")
sources/8 = SubResource("TileSetAtlasSource_0frfi")

[node name="Grid" type="TileMapLayer"]
tile_set = SubResource("TileSet_nvjli")
script = ExtResource("9_seumx")

[node name="MoveTimer" type="Timer" parent="."]

[node name="PieceMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_x8hxf")
volume_db = 5.0
bus = &"SFX"

[node name="PieceRotate" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_skbss")
volume_db = 5.0
bus = &"SFX"

[node name="PieceFail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ick42")
volume_db = 10.0
bus = &"SFX"

[node name="PieceDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hj3iq")
volume_db = -10.0
bus = &"SFX"

[node name="LineClear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_jg17o")
volume_db = 10.0
bus = &"SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_j82em")
bus = &"Music"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
